[project]
name = "backend"
version = "1.0.0"
description = "Creative Tools API - 创意资产管理后台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "fastapi==0.128.1",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.22",

    # 数据库
    "sqlalchemy==2.0.46",
    "pymysql==1.1.2",
    "aiomysql==0.3.2",

    # Redis
    "redis==7.1.0",

    # 任务队列
    "celery==5.6.2",
    "celery-types==0.24.0",

    # 认证和安全
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.12.5",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",

    # HTTP客户端
    "httpx==0.28.1",

    # 数据库迁移
    "alembic==1.18.3",

    # 环境变量管理
    "python-dotenv==1.2.1",

    # 对象存储
    "minio==7.2.20",

    # 翻译服务
    "googletrans==4.0.2",

    # 日志 (Windows平台日志轮换)
    "concurrent-log-handler==0.9.28",
]
